[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/enemies/boss_base/BossBase.gd" type="Script" id=1]

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "die"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "remove_from_scene"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "hurt"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.776471, 0.329412, 0.172549, 1 ), Color( 0.517647, 0, 0, 1 ), Color( 0.776471, 0.329412, 0.172549, 1 ) ]
}

[node name="BossBase" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource( 1 )
health = 1000
damage = 35

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/die = SubResource( 6 )
anims/hurt = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_Hitbox_body_exited"]
